--- a/HTML&CSS/index.html
+++ b/HTML&CSS/index.html
@@ -207,7 +207,7 @@
             <textarea name="" id="comment" rows="3" cols="25"></textarea><br>
 
             <label for="file">file:</label>
-            <input type="file" id="file" accept="images/png, images/jpeg"><br>
+            <input type="file" id="file" accept="images/png, images/jpeg">
 
             <input type="reset">
             <input type="submit">
