--- a/HTML&CSS/index.html
+++ b/HTML&CSS/index.html
@@ -207,12 +207,12 @@
             <textarea name="" id="comment" rows="3" cols="25"></textarea><br>
 
             <label for="file">file:</label>
-            <input type="file" id="file" accept="images/png, images/jpeg">
+            <input type="file" id="file" accept="images/png, images/jpeg"><br>
 
             <input type="reset">
             <input type="submit">
         </form>
 
-
+        <p>test</p>
     </body>
 </html>
