--- a/HTML&CSS/index.html
+++ b/HTML&CSS/index.html
@@ -5,6 +5,20 @@
         <link rel="icon" href="images/cinder.jpg">
 
         <title>My first website</title>
+        <link rel="stylesheet" href="style.css">
+<!--
+        <style>
+            body{
+                background-color: grey;
+            }
+            h1{
+                color: aqua;
+            }
+            p{
+                color: antiquewhite;
+            }
+        </style>
+-->
     </head>
 
     <body>
@@ -213,6 +227,29 @@
             <input type="submit">
         </form>
 
-        <p>test</p>
+        <!-- header/footer -->
+        <header style="background-color: violet;">
+            <h1>Dark Souls</h1>
+            <a href="">Home</a>
+            <a href="">About us</a>
+            <a href="">Contacts</a>
+            <hr>
+        </header>
+
+        <main>
+            <h4>Check this out</h4>
+            <img src="images/boss.jfif" alt="Souls of Cinder">
+            <p id="p1" class="odd">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sint repellendus, magnam quasi dolor ex veniam consequuntur nulla architecto placeat perferendis ea explicabo nemo itaque dolorum vitae, rerum facilis! Quo!</p>
+            <p id="p2" class="even">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sint repellendus, magnam quasi dolor ex veniam consequuntur nulla architecto placeat perferendis ea explicabo nemo itaque dolorum vitae, rerum facilis! Quo!</p>
+            <p id="p3" class="odd">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sint repellendus, magnam quasi dolor ex veniam consequuntur nulla architecto placeat perferendis ea explicabo nemo itaque dolorum vitae, rerum facilis! Quo!</p>
+            <p id="p4" class="even">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sint repellendus, magnam quasi dolor ex veniam consequuntur nulla architecto placeat perferendis ea explicabo nemo itaque dolorum vitae, rerum facilis! Quo!</p>
+        </main>
+
+        <footer style="background-color: violet;">
+            <hr>
+            author: Hieu Nguyen Khac <br>
+            &copy; copyright reserved <br>
+            <small><a href="mailto:hieubinbom@gmail.com">hieubinbom@gmail.com</a></small>
+        </footer>
     </body>
 </html>
