--- a/HTML&CSS/index.html
+++ b/HTML&CSS/index.html
@@ -470,7 +470,7 @@ static = default position for an element -->
     </div>
 
     <div class="icon">
-        <a href="index.html"><i class="fa-solid fa-house fa-1x" style=""></i></a>
+        <a href="index.html"><i class="fa-solid fa-house fa-1x"></i></a>
         <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube fa-1x"></i></a>
         <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook fa-1x"></i></a>
     </div>
