--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -60,8 +60,28 @@
         <h3 id="a11_result2"></h3>
     </div>
     
+    <div id="a24_form">
+        <h1>Temperature conversion:</h1>
+        <input type="number" id="a24_number" value="0"><br>
 
+        <input type="radio" id="ctof" name="unit">
+        <label for="ctof">Celsius -> Fahrenheit</label><br>
+
+        <input type="radio" id="ftoc" name="unit">
+        <label for="ftoc">Fahrenheit -> Celsius</label><br>
+
+        <button id="a24_button" onclick="convertTemperature()">Convert</button>
+        <h3 id="a24_result">Result here</h3>
+    </div>
             
+    <div id="dice_roller">
+        <h1>Dice roller:</h1>
+        <label for="dice_input"># of dice:</label>
+        <input type="number" id="dice_input" value="1" min="1">
+        <button onclick="rollDice()">Roll Dice</button>
+        <div id="dice_result"></div>
+        <div id="dice_image"></div>
+    </div>
 
     <script src="index.js"></script>
 </body>
